# ndaa_dfars

./: .gitignore  README.md  langgraph.json  ndaa_plaws.csv  parse_tracker.py  pyproject.toml
dfars/: dfars_diff.py  extract_hierarchy.py  extract_references.py  extract_usc_citations.py  ingest_dfars.py  scrape_ecfr.py  scrape_fr.py  strip_dfars_chapters.py
ndaa/: extract_and_ingest.py  extract_citations.py
pipeline/: fetch_context.py  fetch_drafting_context.py
pipeline/agents/baseline/: agent.py  schemas.py
pipeline/agents/framework2/: agent.py  eval.py  eval_whole.py  far_drafting_guide.md  langgraph.json  plan.md  requirements.txt  schemas.py  score_by_change_type.py  score_by_group_size.py  utils.py
utils/: api_utils.py  get_dfars.py  get_ndaa.py  mongo_utils.py  ndaa_html_parser.py  openai.py
