[project]
name = "ndaa_dfars"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sacrebleu>=2.6.0",
    "selectolax>=0.4.10",
    "tiktoken>=0.13.0",
    "tqdm>=4.68.1",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["utils*", "ndaa*", "dfars*"]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.29",
]
